--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: wecTeam
+title: WecTeam
 subtitle:
 description:
 keywords:
-author: wecTeam
+author: WecTeam
 language: zh-Hans
 timezone:
 
