--- a/themes/icarus/_config.yml
+++ b/themes/icarus/_config.yml
@@ -239,3 +239,6 @@ providers:
     fontcdn: google
     # Name or URL of the webfont Icon CDN provider
     iconcdn: fontawesome
+
+busuanzi:
+ enable: true
